# fuckAokana

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindLZ4.cmake  FindSWSCALE.cmake
src/: CMakeLists.txt  FUCKAOKANA_VERSION.cmake  archive.cpp  archive.h  archive_list.cpp  archive_list.h  embed_data.c  embed_data.h  extract.cpp  extract.h  extract_all.cpp  extract_all.h  extract_cgs.cpp  extract_cgs.h  fuckaokana.rc.in  fuckaokana_config.h.in  fuckaokana_version.h.in  main.cpp  merge_cg.c  merge_cg.h
src/unityfs/: asset.cpp  asset.h  assetref.cpp  assetref.h  block_storage.cpp  block_storage.h  decompress.cpp  decompress.h  dump.cpp  dump.h  environment.cpp  environment.h  object.cpp  object.h  object_info.cpp  object_info.h  type.cpp  type.h  unityfs.cpp  unityfs.h  unityfs_private.h
src/unityfs/object/: boolean.cpp  boolean.h  dict.cpp  dict.h  map.cpp  map.h  number.cpp  number.h  pointer.cpp  pointer.h  streamed_resource.cpp  streamed_resource.h  string.cpp  string.h  vector.cpp  vector.h
